<resources>
    <string name="app_name">Homework_6_msv</string>
    <string name="frag1_text">Fragment 1</string>
    <string name="frag2_text">Fragment 2</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="replace">Replace</string>
    <string name="stack">add to Back Stack</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Изменить_дату">Change data</string>
    <string name="Изменить_время">Change time</string>
    <string name="log">Log</string>
    <string name="find">Find</string>
</resources>